--- a/STLE/style.css
+++ b/STLE/style.css
@@ -81,14 +81,14 @@
 /* Action Section */
 .action-section {
   padding: 100px 0;
-  font-family: Raleway, sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .action-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 60px;
+  gap: 175px;
   flex-wrap: wrap;
 }
 
@@ -110,15 +110,60 @@
   border-radius: 24px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
-.h2-action{
-    font-weight: 700;
-    font-size: 42px;
-    margin-bottom: 23px;
-    color: #252432;
+
+.h2-action {
+  font-weight: 700;
+  font-size: 42px;
+  margin-bottom: 23px;
+  color: #252432;
 }
-.p-action{
-    font-size: 24px;
-    margin-bottom: 23px;
-    color: rgba(37, 36, 50, 0.5);
+
+.p-action {
+  font-size: 24px;
+  margin-bottom: 23px;
+  color: rgba(37, 36, 50, 0.5);
 }
-.action-margin
+
+/* STATS SECTION */
+.stats-section {
+  padding: 100px 0;
+}
+
+.stats-box {
+  background-color: #e5e7ff;
+  border-radius: 20px;
+  padding: 50px;
+  text-align: center;
+}
+
+.stats-heading {
+  font-size: 38px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  color: #252432;
+  margin-bottom: 40px;
+}
+
+.stats-grid {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+
+.stat-item h3 {
+  font-family: 'Inter', sans-serif;
+  font-size: 80px;
+  font-weight: bold;
+  color: #4E47FF;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.stat-item p {
+  font-family: 'Inter', sans-serif;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 500;
+}
