--- a/STLE/style.css
+++ b/STLE/style.css
@@ -3,7 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+body{
+  background-color: #F5F8FF;
+}
+.btn-cls:hover {
+  background-color: yellow;
+  color: black;
+}
 .banner-section {
   font-family: 'Raleway', sans-serif;
   background-image: url('../Assets/Hero-bg.png');
@@ -166,4 +172,74 @@
   font-size: 20px;
   color: rgba(0, 0, 0, 0.5);
   font-weight: 500;
+}
+
+/* CONTACT SECTION */
+.contact-section {
+  padding: 100px 0;
+}
+
+.contact-wrapper{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 60px;
+  flex-wrap: wrap;
+}
+
+.contact-heading {
+  flex: 1;
+  min-width: 280px;
+  margin: 120px 0;
+}
+
+.contact-heading h2 {
+  font-size: 70px;
+  font-weight: 700;
+  color: #000000;
+  line-height: 1.2;
+  font-family: 'Raleway', sans-serif;
+}
+
+.contact-form {
+  flex: 1;
+  min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.contact-form label {
+  font-size: 18px;
+  color: #000000;
+  font-weight: 500;
+  font-family: 'Inter', sans-serif;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 14px;
+  border: 1px solid #d1d5db;
+  border-radius: 8px;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  resize: none;
+}
+
+.contact-form .btn-cls {
+  padding: 14px;
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+  margin-top: 10px;
+}
+.contact-form input::placeholder,
+.contact-form textarea::placeholder {
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 500;
+  font-family: 'Inter', sans-serif;
 }
